--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,4 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: make
+      env:
+        EPZY_PASS: ${{secrets.EPZY_PASS}}
+      - run: echo $EPZY_PASS
+      - run: make pass=$EPZY_PASS
