--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,8 +8,7 @@ jobs:
   deploywithftp:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - env:
-          EPZY_PASS: ${{secrets.EPZY_PASS}}
-      - run: echo $EPZY_PASS
-      - run: make pass=$EPZY_PASS
+      - name: Deploying with FTP
+        uses: actions/checkout@v2
+      - run: echo ${{secrets.EPZY_PASS}}
+      - run: make pass="password"
